protect users dashboard pages

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -18,7 +18,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers/{id}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/containers/all/{userId:Guid}",
@@ -30,7 +34,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers/all/{userId:Guid}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/containers",
@@ -42,7 +50,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/containers",
-      "UpstreamHttpMethod": [ "POST", "PUT" ]
+      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Analytics Service
     {
@@ -55,7 +67,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/sites/all/{containerId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/sites/{id}",
@@ -67,7 +83,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/sites/{id}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
@@ -79,7 +99,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/hits",
@@ -91,7 +115,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/hits",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": [ "POST" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/category/top/{siteId}",
@@ -103,7 +131,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/category/top/{siteId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Forms Service
     {
@@ -116,7 +148,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/forms/all/{siteId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/formresponse/all/{formId}",
@@ -128,7 +164,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/formresponse/all/{formId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // History Service
     {
@@ -141,7 +181,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/history/all/{everything}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Links Service
     {
@@ -154,7 +198,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links/{id}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/links/all/{containerId}",
@@ -166,7 +214,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links/all/{containerId}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
@@ -178,7 +230,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/links",
@@ -190,7 +246,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": [ "POST" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/links/redirect/{targetUrl}",
@@ -202,7 +262,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links/redirect/{targetUrl}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/links/redirects/all/{linkId}",
@@ -214,7 +278,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/links/redirects/all/{linkId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Notifications Service
     {
@@ -227,7 +295,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/notifications/reads/{notificationId:int}",
@@ -239,7 +311,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/notifications/reads/{notificationId:int}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/hubs/{catchAll}",
@@ -251,7 +327,11 @@
         }
       ],
       "UpstreamPathTemplate": "/hubs/{catchAll}",
-      "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
+      "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Identity API
     {
@@ -264,7 +344,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/identity/admins/{roleId}",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": [ "POST" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/identity/users",
@@ -276,7 +360,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": [ "POST" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
@@ -288,7 +376,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/identity/users/all?filter={filter}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/{userId:Guid}",
@@ -300,7 +392,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/{userId:Guid}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/{authId}",
@@ -312,7 +408,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/{authId}",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/avatar/{userId}",
@@ -324,7 +424,11 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/avatar/{userId}",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamHttpMethod": [ "POST" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     // Subscriptions Service
     {
@@ -337,7 +441,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/all",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/subscriptions/{id:int}",
@@ -349,7 +457,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/subscriptions",
@@ -361,7 +473,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions",
-      "UpstreamHttpMethod": [ "POST", "PUT" ]
+      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/subscriptions/features/{id:int}",
@@ -373,7 +489,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/subscriptions/features/all",
@@ -385,7 +505,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features/all",
-      "UpstreamHttpMethod": [ "GET" ]
+      "UpstreamHttpMethod": [ "GET" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/subscriptions/features",
@@ -397,7 +521,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/subscriptions/features",
-      "UpstreamHttpMethod": [ "POST", "PUT" ]
+      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     }, // coupons endpoints
     {
       "DownstreamPathTemplate": "/api/coupons/{id:int}",
@@ -409,7 +537,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/coupons/{id:int}",
-      "UpstreamHttpMethod": [ "GET", "DELETE" ]
+      "UpstreamHttpMethod": [ "GET", "DELETE" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     },
     {
       "DownstreamPathTemplate": "/api/coupons",
@@ -421,7 +553,11 @@
         }
       ],
       "UpstreamPathTemplate": "/gateway/coupons",
-      "UpstreamHttpMethod": [ "POST", "PUT" ]
+      "UpstreamHttpMethod": [ "POST", "PUT" ],
+      "AuthenticationOptions": {
+        "AuthenticationProviderKey": "Bearer",
+        "AllowedScopes": [ "user:read" ]
+      }
     }
   ]
 }
