--- a/src/Formee/docker-compose.yml
+++ b/src/Formee/docker-compose.yml
@@ -1,29 +1,29 @@
 version: "3.8"
 
 services:
-  client.web:
-    container_name: client.web
-    build:
-      context: .
-      dockerfile: "./FrontEnd/Users/Client.Web/Dockerfile"
-    expose:
-      - "80"
-    ports:
-      - "8080:80"
-    depends_on:
-      - gateway.core
+  # client.web:
+  #   container_name: client.web
+  #   build:
+  #     context: .
+  #     dockerfile: "./FrontEnd/Users/Client.Web/Dockerfile"
+  #   expose:
+  #     - "80"
+  #   ports:
+  #     - "8080:80"
+  #   depends_on:
+  #     - gateway.core
 
-  admin.web:
-    container_name: admin.web
-    build:
-      context: .
-      dockerfile: "./FrontEnd/Admins/Admins.Web/Dockerfile"
-    expose:
-      - "80"
-    ports:
-      - "8081:80"
-    depends_on:
-      - gateway.core
+  # admin.web:
+  #   container_name: admin.web
+  #   build:
+  #     context: .
+  #     dockerfile: "./FrontEnd/Admins/Admins.Web/Dockerfile"
+  #   expose:
+  #     - "80"
+  #   ports:
+  #     - "8081:80"
+  #   depends_on:
+  #     - gateway.core
       
   gateway.core:
     container_name: gateway.core
