configure users web client to use authentication and authorization

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Auth0": {
+    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Audience": "https://services.formee.io"
+  },
   "AllowedHosts": "*",
   "Routes": [
     // Containers Service
@@ -360,11 +364,7 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users",
-      "UpstreamHttpMethod": [ "POST" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
-      }
+      "UpstreamHttpMethod": [ "POST" ]
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
