--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Auth0": {
-    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   },
   "AllowedHosts": "*",
@@ -331,11 +331,7 @@
         }
       ],
       "UpstreamPathTemplate": "/hubs/{catchAll}",
-      "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
-      }
+      "UpstreamHttpMethod": [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
     },
     // Identity API
     {
@@ -355,7 +351,7 @@
       }
     },
     {
-      "DownstreamPathTemplate": "/api/identity/users",
+      "DownstreamPathTemplate": "/api/identity/users/{everything}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -363,8 +359,8 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/identity/users",
-      "UpstreamHttpMethod": [ "POST" ]
+      "UpstreamPathTemplate": "/api/identity/users/{everything}",
+      "UpstreamHttpMethod": [ "POST", "GET" ]
     },
     {
       "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
@@ -392,22 +388,6 @@
         }
       ],
       "UpstreamPathTemplate": "/api/identity/users/{userId:Guid}",
-      "UpstreamHttpMethod": [ "GET" ],
-      "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
-      }
-    },
-    {
-      "DownstreamPathTemplate": "/api/identity/users/{authId}",
-      "DownstreamScheme": "http",
-      "DownstreamHostAndPorts": [
-        {
-          "Host": "identity.service",
-          "Port": 80
-        }
-      ],
-      "UpstreamPathTemplate": "/api/identity/users/{authId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer",
