--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "Auth0": {
-    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
-    "Audience": "https:api.formee.io/identity",
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "Audience": "https://services.formee.io",
     "APIUrl": "https://login.auth0.com"
   },
   "AzureStorage": {
