--- a/src/Formee/Services/Notifications/Presentation/appsettings.json
+++ b/src/Formee/Services/Notifications/Presentation/appsettings.json
@@ -9,6 +9,10 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Auth0": {
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "Audience": "https://services.formee.io"
+  },
   "ServiceBus": {
     "ConnectionString": "",
     "History": "",
