update authentication and authorization

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -24,8 +24,7 @@
       "UpstreamPathTemplate": "/api/containers/{id}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -40,8 +39,7 @@
       "UpstreamPathTemplate": "/api/containers/all/{userId:Guid}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -56,8 +54,7 @@
       "UpstreamPathTemplate": "/api/containers",
       "UpstreamHttpMethod": [ "POST", "PUT" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // Analytics Service
@@ -73,8 +70,7 @@
       "UpstreamPathTemplate": "/api/sites/all/{containerId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -89,8 +85,7 @@
       "UpstreamPathTemplate": "/api/sites/{id}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -105,8 +100,7 @@
       "UpstreamPathTemplate": "/api/hits/all/{siteId}/{startDate:DateTime}/{endDate:DateTime}?filter={filter}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -121,8 +115,7 @@
       "UpstreamPathTemplate": "/api/hits",
       "UpstreamHttpMethod": [ "POST" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -137,8 +130,7 @@
       "UpstreamPathTemplate": "/api/category/top/{siteId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // Forms Service
@@ -154,8 +146,7 @@
       "UpstreamPathTemplate": "/api/forms/all/{siteId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -170,8 +161,7 @@
       "UpstreamPathTemplate": "/api/formresponse/all/{formId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // History Service
@@ -187,8 +177,7 @@
       "UpstreamPathTemplate": "/api/history/all/{everything}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // Links Service
@@ -204,8 +193,7 @@
       "UpstreamPathTemplate": "/api/links/{id}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -220,8 +208,7 @@
       "UpstreamPathTemplate": "/api/links/all/{containerId}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -236,8 +223,7 @@
       "UpstreamPathTemplate": "/api/links/hits/all/{containerId}/{startDate:DateTime}/{endDate:DateTime}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -252,8 +238,7 @@
       "UpstreamPathTemplate": "/api/links",
       "UpstreamHttpMethod": [ "POST" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -268,8 +253,7 @@
       "UpstreamPathTemplate": "/api/links/redirect/{targetUrl}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -284,8 +268,7 @@
       "UpstreamPathTemplate": "/api/links/redirects/all/{linkId}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // Notifications Service
@@ -301,8 +284,7 @@
       "UpstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -317,8 +299,7 @@
       "UpstreamPathTemplate": "/api/notifications/reads/{notificationId:int}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -346,8 +327,7 @@
       "UpstreamPathTemplate": "/gateway/identity/admins/{roleId}",
       "UpstreamHttpMethod": [ "POST" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -374,8 +354,7 @@
       "UpstreamPathTemplate": "/gateway/identity/users/all?filter={filter}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -390,8 +369,7 @@
       "UpstreamPathTemplate": "/api/identity/users/{userId:Guid}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -406,8 +384,7 @@
       "UpstreamPathTemplate": "/api/identity/users/avatar/{userId}",
       "UpstreamHttpMethod": [ "POST" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     // Subscriptions Service
@@ -423,8 +400,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions/all",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -439,8 +415,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions/{id:int}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -455,8 +430,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions",
       "UpstreamHttpMethod": [ "POST", "PUT" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -471,8 +445,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions/features/{id:int}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -487,8 +460,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions/features/all",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -503,8 +475,7 @@
       "UpstreamPathTemplate": "/gateway/subscriptions/features",
       "UpstreamHttpMethod": [ "POST", "PUT" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     }, // coupons endpoints
     {
@@ -519,8 +490,7 @@
       "UpstreamPathTemplate": "/gateway/coupons/{id:int}",
       "UpstreamHttpMethod": [ "GET", "DELETE" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     },
     {
@@ -535,8 +505,7 @@
       "UpstreamPathTemplate": "/gateway/coupons",
       "UpstreamHttpMethod": [ "POST", "PUT" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer",
-        "AllowedScopes": [ "user:read" ]
+        "AuthenticationProviderKey": "Bearer"
       }
     }
   ]
