--- a/src/Formee/Services/Forms/Presentation/appsettings.json
+++ b/src/Formee/Services/Forms/Presentation/appsettings.json
@@ -10,7 +10,7 @@
     "DefaultConnection": ""
   },
   "Auth0": {
-    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   }
 }
