--- a/src/Formee/Services/Links/Links.API/appsettings.json
+++ b/src/Formee/Services/Links/Links.API/appsettings.json
@@ -11,5 +11,9 @@
   },
   "Services": {
     "Subscriptions": "http://localhost:5214/"
+  },
+  "Auth0": {
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "Audience": "https://services.formee.io"
   }
 }
