--- a/src/Formee/Services/Subscriptions/Subscriptions.API/appsettings.json
+++ b/src/Formee/Services/Subscriptions/Subscriptions.API/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": ""
+  },
+  "Auth0": {
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "Audience": "https://services.formee.io"
   }
 }
