--- a/src/Formee/Services/Analytics/Analytics.API/appsettings.json
+++ b/src/Formee/Services/Analytics/Analytics.API/appsettings.json
@@ -18,7 +18,7 @@
     "Subscriptions": "http://localhost:5214/"
   },
   "Auth0": {
-    "Authority": "https://dev-pnxnfhh8.us.auth0.com/",
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
     "Audience": "https://services.formee.io"
   }
 }
