--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -24,6 +24,10 @@
   "Settings": {
     "EnableHttpsRedirection": false
   },
+  "Auth0": {
+    "Domain": "dev-pnxnfhh8.us.auth0.com",
+    "Audience": "https://services.formee.io"
+  },
   "Services": {
     "Subscriptions": "http://localhost:5214/"
   }
