modify identity routes

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -284,7 +284,10 @@
       "UpstreamPathTemplate": "/api/notifications/all/{globalUserId}/{numberOfRecords}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer"
+        "AuthenticationProviderKey": "Bearer",
+        "RouteClaimsRequirement": {
+          "https://claims.formee.com/permission": "user:read-access"
+        }
       }
     },
     {
@@ -299,7 +302,10 @@
       "UpstreamPathTemplate": "/api/notifications/reads/{notificationId:int}",
       "UpstreamHttpMethod": [ "GET" ],
       "AuthenticationOptions": {
-        "AuthenticationProviderKey": "Bearer"
+        "AuthenticationProviderKey": "Bearer",
+        "RouteClaimsRequirement": {
+          "https://claims.formee.com/permission": "user:read-access"
+        }
       }
     },
     {
@@ -386,6 +392,18 @@
       "AuthenticationOptions": {
         "AuthenticationProviderKey": "Bearer"
       }
+    },
+    {
+      "DownstreamPathTemplate": "/api/identity/users/token",
+      "DownstreamScheme": "http",
+      "DownstreamHostAndPorts": [
+        {
+          "Host": "identity.service",
+          "Port": 80
+        }
+      ],
+      "UpstreamPathTemplate": "/gateway/identity/users/token",
+      "UpstreamHttpMethod": [ "GET" ]
     },
     // Subscriptions Service
     {
