--- a/src/Formee/Services/Containers/API/appsettings.json
+++ b/src/Formee/Services/Containers/API/appsettings.json
@@ -29,6 +29,6 @@
     "Audience": "https://services.formee.io"
   },
   "Services": {
-    "Subscriptions": "http://localhost:5214/"
+    "Subscriptions": "http://host.docker.internal:5007"
   }
 }
