--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -11,6 +11,11 @@
     "Audience": "https://services.formee.io",
     "APIUrl": "https://login.auth0.com"
   },
+  "M2M": {
+    "Grant_Type": "client_credentials",
+    "Client_Id": "KOUvgj21YBsZjCaok4Uq89DUfuCnquhA",
+    "Client_Secret": "H0SUH-wombhBgL4dxgP4q4dHPtUhmENTbmkOaq-oHNs7AU0yOGuF2ETfUf4vgbgd"
+  },
   "AzureStorage": {
     "ConnectionString": "",
     "ContainerName": ""
@@ -19,6 +24,6 @@
     "DefaultConnection": ""
   },
   "Services": {
-    "Subscriptions": "http://localhost:5007"
+    "Subscriptions": "http://host.docker.internal:5007"
   }
 }
