--- a/src/Formee/Services/Identity/Identity.API/appsettings.Development.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Services": {
+    "Subscriptions": "https://localhost:7054"
   }
 }
