add subscription feature to the users dashboard

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -337,7 +337,7 @@
       }
     },
     {
-      "DownstreamPathTemplate": "/api/identity/users/{everything}",
+      "DownstreamPathTemplate": "/api/identity/users",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -345,9 +345,21 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/api/identity/users/{everything}",
-      "UpstreamHttpMethod": [ "POST", "GET" ]
+      "UpstreamPathTemplate": "/api/identity/users",
+      "UpstreamHttpMethod": [ "POST", "PUT" ]
     },
+    //{
+    //  "DownstreamPathTemplate": "/api/identity/users/{everything}",
+    //  "DownstreamScheme": "http",
+    //  "DownstreamHostAndPorts": [
+    //    {
+    //      "Host": "identity.service",
+    //      "Port": 80
+    //    }
+    //  ],
+    //  "UpstreamPathTemplate": "/api/identity/users/{everything}",
+    //  "UpstreamHttpMethod": [ "POST" ]
+    //},
     {
       "DownstreamPathTemplate": "/api/identity/users/all?filter={filter}",
       "DownstreamScheme": "http",
