implement custom authorization

--- a/src/Formee/Gateways/Gateway.Core/appsettings.json
+++ b/src/Formee/Gateways/Gateway.Core/appsettings.json
@@ -406,7 +406,7 @@
       }
     },
     {
-      "DownstreamPathTemplate": "/api/identity/users/token",
+      "DownstreamPathTemplate": "/api/identity/users/token/{userId}",
       "DownstreamScheme": "http",
       "DownstreamHostAndPorts": [
         {
@@ -414,7 +414,7 @@
           "Port": 80
         }
       ],
-      "UpstreamPathTemplate": "/gateway/identity/users/token",
+      "UpstreamPathTemplate": "/gateway/identity/users/{userId}",
       "UpstreamHttpMethod": [ "GET" ]
     },
     // Subscriptions Service
