--- a/src/Formee/Services/Identity/Identity.API/appsettings.json
+++ b/src/Formee/Services/Identity/Identity.API/appsettings.json
@@ -11,6 +11,10 @@
     "Audience": "https://services.formee.io",
     "APIUrl": "https://login.auth0.com"
   },
+  "Identity": {
+    "Audience": "https://services.formee.io",
+    "Issuer": "https://auth.formee.io"
+  },
   "M2M": {
     "Grant_Type": "client_credentials",
     "Client_Id": "KOUvgj21YBsZjCaok4Uq89DUfuCnquhA",
